<resources>
    <string name="app_name">Alarm</string>
    <string name="text">text</string>
    <string name="Time">目覚まし設定</string>
    <string name="TimeName">アラームの名前</string>
    <string name="calender">メモ</string>
    <string name="niti">日</string>
    <string name="getu">月</string>
    <string name="ka">火</string>
    <string name="sui">水</string>
    <string name="moku">木</string>
    <string name="kin">金</string>
    <string name="dou">土</string>
    <string name="kakunin">選択した曜日</string>
    <string name="AlarmMusic">アラーム音声</string>
    <string name="AfterMusic">起床後の音声</string>
    <string name="setAlarmName">選択したアラーム音</string>
    <string name="setAfterMusicName">選択した音声</string>
    <string name="save">保存</string>
    <string name="delete">削除する</string>
    <string name="switch_button">アラーム Off/On</string>
    <string name="alarm_switch">Off/On</string>
    <string name="alarm_information">アラームの情報</string>
    <string name="back">戻る</string>
    <string name="cancel">キャンセル</string>
    <string name="Time_setting">時刻の設定</string>
    <string name="start">Alarm!</string>
    <string name="stopBtn">Stop Alarm</string>
    <string name="setBackgroundName">アラーム起動時の背景画面</string>
    <string name="chooseBackground">背景</string>
    <string name="stop_music">再生終了</string>
    <string name="Not_set">背景未設定</string>
    <string name="Image_Name">背景画像選択</string>
    <string name="Schedule_input">ここに予定を入力してください</string>
    <string name="Note">※使用方法について\n・Alarmの音量はスマホの音量が反映されます。\n・目覚ましとして使用する際は就寝前にスマホの音量をある程度上げておくことを推奨します。\n・スリープ状態で使用する場合(例:目覚ましを設定して使う場合)システム権限を得ることができないためこのアプリの画面を開いたままスリープ状態にしてください。\n</string>
</resources>